--- a/index.html
+++ b/index.html
@@ -46,9 +46,28 @@
               <a href="#" class="btn">google</a>
                 <a href="#" class="btn">facebook</a>
             </div>
-            <p>don't have an account <a href="#">create one</a></p>
+            <p>don't have an account <a href="javascript:void(0);" id="create-account-link">create one</a></p>
           </form>
         </div>
+
+        <div class="signup-form-container">
+            <span class="fas fa-times" id="close-signup-form"></span>
+        
+            <form action="">
+                <h3>create an account</h3>
+                <input type="text" placeholder="name" class="box">
+                <input type="email" placeholder="email" class="box">
+                <input type="password" placeholder="password" class="box">
+                <input type="password" placeholder="confirm password" class="box">
+                <input type="submit" value="sign up" class="btn">
+                <p>or sign up with</p>
+                <div class="buttons">
+                    <a href="#" class="btn">google</a>
+                    <a href="#" class="btn">facebook</a>
+                </div>
+            </form>
+        </div>
+        
 
 <section class="home" id="home">
         <h1 class="home-parallax" data-speed="-2">find your bike</h1>
@@ -109,7 +128,7 @@
                     <span class="fas fa-circle"></span> 1000cc
                     <span class="fas fa-circle"></span> 0km
                 </p>
-                <a href="#" class="btn">check out</a>
+                <a href="#" class="btn checkout-btn" data-name="yamaha r1" data-price="$2000" data-year="2021" data-cc="1000cc">check out</a>
             </div>
         </div>
 
@@ -124,7 +143,7 @@
                     <span class="fas fa-circle"></span> 1000cc
                     <span class="fas fa-circle"></span> 0km
                 </p>
-                <a href="#" class="btn">check out</a>
+                <a href="#" class="btn checkout-btn" data-name="aprilia rsv4" data-price="$2000" data-year="2021" data-cc="1000cc">check out</a>
             </div>
         </div>
 
@@ -139,7 +158,7 @@
                     <span class="fas fa-circle"></span> 1000cc
                     <span class="fas fa-circle"></span> 0km
                 </p>
-                <a href="#" class="btn">check out</a>
+                <a href="#" class="btn checkout-btn" data-name="ducati v4" data-price="$2000" data-year="2021" data-cc="1000cc">check out</a>
             </div>
         </div>
 
@@ -154,7 +173,7 @@
                     <span class="fas fa-circle"></span> 1000cc
                     <span class="fas fa-circle"></span> 0km
                 </p>
-                <a href="#" class="btn">check out</a>
+                <a href="#" class="btn checkout-btn" data-name="kawasaki zx10r" data-price="$2000" data-year="2021" data-cc="1000cc">check out</a>
             </div>
         </div>
 
@@ -169,7 +188,7 @@
                     <span class="fas fa-circle"></span> 1000cc
                     <span class="fas fa-circle"></span> 0km
                 </p>
-                <a href="#" class="btn">check out</a>
+                <a href="#" class="btn checkout-btn" data-name="yamaha r1m" data-price="$2000" data-year="2021" data-cc="1000cc">check out</a>
             </div>
         </div>
 
@@ -184,7 +203,7 @@
                     <span class="fas fa-circle"></span> 1000cc
                     <span class="fas fa-circle"></span> 0km
                 </p>
-                <a href="#" class="btn">check out</a>
+                <a href="#" class="btn checkout-btn" data-name="yamaha r1" data-price="$2000" data-year="2021" data-cc="1000cc">check out</a>
             </div>
         </div>
 
@@ -196,10 +215,10 @@
                 <p>
                     new
                     <span class="fas fa-circle"></span> 2021
-                    <span class="fas fa-circle"></span> 1000cc
+                    <span class="fas fa-circle"></span> 600cc
                     <span class="fas fa-circle"></span> 0km
                 </p>
-                <a href="#" class="btn">check out</a>
+                <a href="#" class="btn checkout-btn" data-name="yamaha r6" data-price="$2000" data-year="2021" data-cc="600cc">check out</a>
             </div>
         </div>
 
